# django-email-log

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  Justfile  MANIFEST.in  Makefile  README.rst  manage.py  pyproject.toml  runtests.py  runtests.sh  setup.py  tox.ini
.github/workflows/: tests.yml
.tx/: config
docs/: Makefile  conf.py  index.rst  make.bat  usage.rst
email_log/: __init__.py  admin.py  apps.py  backends.py  conf.py  models.py  signal_handlers.py
email_log/locale/de/LC_MESSAGES/: django.mo  django.po
email_log/locale/en/LC_MESSAGES/: django.mo  django.po
email_log/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
email_log/migrations/: 0001_initial.py  0002_email.py  0003_email_html_message_attachment.py  0004_alter_attachment_file.py  0005_email_bcc_recipients_email_cc_recipients.py  0006_email_extra_headers_email_reply_to.py  0007_log.py
email_log/nonsouth/migrations/: __init__.py
email_log/templates/admin/email_log/email/: change_form.html
email_log/tests/: backends.py  tests.py  urls.py
tests/: backends.py  settings.py  test_email_log.py  test_signal_handlers.py  urls.py
