[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "django-email-log"
authors = [{name = "Trey Hunner", email = "trey@treyhunner.com"}]
description = "Django email backend that logs all emails"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
]
dependencies = [
    "Django >= 2.2.0"
]
dynamic = [
    "version",
]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/treyhunner/django-email-log"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "email_log.__version__"}

[tool.setuptools.packages]
find = {namespaces = false}

[tool.coverage.paths]
source = [
    "email_log",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "tests.settings"
addopts = [
    "--cov",
    "--verbose",
    "--cov-branch",
    "--no-cov-on-fail",
    "--cov-report=term",
    "--cov-report=html",
]
